--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
   </head>
 
   <body>
+
+    <form class="form">
+      <!-- onkeyup="searchSeries()" -->
+      <!-- oninput="Search()" -->
+      <input id="searchbar" type="text" class="input" placeholder="search..."/>
+      <button id="clearBtn" class="clear-btn">clear</button>
+    </form>
+    <!-- <div class="search-wraper">
+      <label for="search">Search content</label>
+      <input type="search" id="search">
+    </div> -->
+
     <div id="root">
+      <!-- <ul id="listOfMovies">
+      </ul> -->
     </div>
+
+  <footer>
+    <p>This content is from https://www.tvmaze.com/</p>
+  </footer>
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
