count displayed episodes

--- a/index.html
+++ b/index.html
@@ -11,20 +11,15 @@
   <body>
 
     <form class="form">
-      <!-- onkeyup="searchSeries()" -->
-      <!-- oninput="Search()" -->
       <input id="searchbar" type="text" class="input" placeholder="search..."/>
       <button id="clearBtn" class="clear-btn">clear</button>
     </form>
-    <!-- <div class="search-wraper">
-      <label for="search">Search content</label>
-      <input type="search" id="search">
-    </div> -->
 
-    <div id="root">
-      <!-- <ul id="listOfMovies">
-      </ul> -->
+    <div>
+      <span id="displayNumOfEpisodes"></span>
     </div>
+
+    <div id="root"></div>
 
   <footer>
     <p>This content is from https://www.tvmaze.com/</p>
