--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
 
   <body>
 
+    <select name="select-episode" id="selectEpisodeList">
+      <option value="none">All episodes</option>
+      <!-- <option value="blue">Blue t-shirt</option>
+      <option value="orange">Orange t-shirt</option> -->
+    </select>
+
     <form class="form">
       <input id="searchbar" type="text" class="input" placeholder="search..."/>
       <button id="clearBtn" class="clear-btn">clear</button>
     </form>
 
     <div>
-      <span id="displayNumOfEpisodes"></span>
+      <p id="displayNumOfEpisodes"></p>
     </div>
 
     <div id="root"></div>
