added show list

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
   <body>
   <nav class="navigation">
-    <select name="select-episode" id="selectEpisodeList">
-      <!-- <option value="none">All episodes</option> -->
+    <select name="select-show" id="selectShow">
+      <option value="none">All episodes</option>
     </select>
 
-    <form class="form-selectbar">
+    <!-- <form class="form-selectbar">
       <input id="searchbar" type="text" class="input" placeholder="search..."/>
       <button id="clearBtn" class="clear-btn">clear</button>
-    </form>
+    </form> -->
 
-    <div>
+    <!-- <div>
       <p id="displayNumOfEpisodes"></p>
-    </div>
+    </div> -->
   </nav>
   
   <main class="container">
@@ -33,7 +33,7 @@
     <p>This content is from https://www.tvmaze.com/</p>
   </footer>
 
-    <script src="episodes.js"></script>
+    <!-- <script src="episodes.js"></script> -->
     <script src="script.js"></script>
   </body>
 </html>
