--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
   <nav class="navigation">
     <select name="select-show" id="selectShow">
-      <option value="none">All episodes</option>
+      <option value="all">All episodes</option>
     </select>
 
     <!-- <form class="form-selectbar">
