commit before search function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <body>
   <nav class="navigation">
     <select name="select-show" id="selectShow">
-      <option value="all">All episodes</option>
+      <!-- <option value="all">All shows</option> -->
+    </select>
+
+    <select name="select-episode" id="selectEpisode">
+      <!-- <option value="all">All episodes</option> -->
     </select>
 
     <!-- <form class="form-selectbar">
