--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <!-- <option value="all">All episodes</option> -->
     </select>
 
-    <!-- <form class="form-selectbar">
+    <form class="form-selectbar">
       <input id="searchbar" type="text" class="input" placeholder="search..."/>
-      <button id="clearBtn" class="clear-btn">clear</button>
-    </form> -->
+      <!-- <button id="clearBtn" class="clear-btn">clear</button> -->
+    </form>
 
     <!-- <div>
       <p id="displayNumOfEpisodes"></p>
