commit before adding mark tag

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <!-- <button id="clearBtn" class="clear-btn">clear</button> -->
     </form>
 
-    <!-- <div>
-      <p id="displayNumOfEpisodes"></p>
-    </div> -->
+    <div>
+      <p id="displayNumOfMovies"></p>
+    </div>
   </nav>
   
   <main class="container">
