--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TV Show Project | Simeon Bikov (simeonbikov)</title>
     <link href="style.css" rel="stylesheet" />
     <link href="width-style.css" rel="stylesheet" />
-    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
 
   <body>
