--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>TV Show Project | Simeon Bikov (simeonbikov)</title>
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/width-style.css" rel="stylesheet" />
+    <link href="css/variables.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
 
