--- a/index.html
+++ b/index.html
@@ -19,25 +19,26 @@
     <nav class="navigation">
      <button id="homeBtn" class="home-btn"><i class="fa fa-home"></i>
      </button>
-     <div class="select-box">
+     <div class="fields-wrapper">
+      <div>
+      </div>
         <div class="select-wrapper">
           <select name="select-show" id="selectShow" class="selector">
           </select>
         </div>
+
         <div class="select-wrapper">
           <select name="select-episode" id="selectEpisode" class="selector">
           </select>
         </div>
-     </div>
-     <div class="input-box">
+
         <div class="input-wrapper">
           <input id="searchbar" type="search" class="input" placeholder="search..."/>
         </div>
-        <div class="display-num-of-movies">
-          <p id="displayNumOfMovies"></p>
-        </div>
+      </div>
+      <div class="display-num-of-movies">
+        <p id="displayNumOfMovies"></p>
      </div>
-      
     </nav>
 
   </header>
