--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script src="js/hl.js" async></script>
+    <script src="js/script.js" async></script>
   </head>
 
   <body>
@@ -69,8 +71,5 @@
         This content is from <a href="https://www.tvmaze.com/">tvmaze.com</a>
       </p>
     </footer>
-
-    <script src="js/script.js"></script>
-    <script src="js/hl.js"></script>
   </body>
 </html>
